ponyhug2/ponyhug2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ponyhug2-backend-svc
  namespace: ponyhug2
  labels:
    app: ponyhug2-backend
spec:
  type: ClusterIP
  ports:
    - name: ponyhug2-backend
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: ponyhug2-backend
